# ExposeCppToQML

./: CMakeLists.txt  README.md  assets.qrc  gearcontroller.cpp  gearcontroller.h  gearcontrollermanager.cpp  gearcontrollermanager.h  main.cpp
qml/: BottomBar.qml  Gear.qml  Main.qml
res/: config.cmake
